--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 # MONGO_URI=mongodb+srv://saroj:12345@cluster0.vgu4kmg.mongodb.net/Sarathi
 # MONGO_URI=mongodb+srv://saroj:12345@cluster0.vgu4kmg.mongodb.net/skyforgee
 MONGO_URI=mongodb://localhost:27017/localMongoDb
+# MONGO_URI=mongodb://localhost:27017/Sarathi
 
 PORT=5000
 SESSION_SECRET=strong-secret-key-here
