--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ REACT_APP_API_BASE_URL=http://localhost:5000
 # REACT_APP_API_BASE_URL=https://web.skyforgee.com
 # FRONTEND_URL=https://web.skyforgee.com
 # NODE_ENV=production
+DANGEROUSLY_DISABLE_HOST_CHECK=true
