--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-window": "^1.8.11",
     "sheetjs-style": "^0.15.8",
     "web-vitals": "^2.1.4",
+    "webpack-dev-server": "^4.15.1",
     "xlsx": "^0.18.5"
   },
   "scripts": {
