--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "react-i18next": "^15.6.1",
     "read-excel-file": "^5.8.8",
     "redis": "^5.8.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
   }
 }
